update to current dev java17 branch